chore: adding basic ui with login page and simple auth
