# dto/auth/generate_token.go
@@ -1,0 +1,6 @@
+package dto
+
+type GenerateAuthTokenRequest struct {
+	Username string
+	Password string
+}
