# models/auth/token.go
@@ -1,0 +1,5 @@
+package models
+
+type AuthToken struct {
+	AccessToken string
+}
